--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroicons-react": "^1.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gtm-module": "^2.0.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
