--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@craco/craco": "^6.1.1",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.1",
+    "@reach/dialog": "^0.16.2",
+    "@reach/router": "^1.3.4",
+    "@reach/tabs": "^0.16.1",
+    "@reach/visually-hidden": "^0.16.0",
     "@tailwindcss/postcss7-compat": "^2.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -16,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-gtm-module": "^2.0.11",
     "react-netlify-identity": "^0.2.5",
+    "react-netlify-identity-widget": "^0.2.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
